manifests/gitlab/middleware-hsts.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitlab-hsts
  namespace: gitlab
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
