manifests/gitlab/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitlab-redirect-https
  namespace: gitlab
spec:
  redirectScheme:
    scheme: https
    permanent: true
