manifests/gitlab/ingressroute-registry.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.git.yornik.eu`)
      kind: Rule
      middlewares:
        - name: gitlab-hsts
          namespace: gitlab
      services:
        - name: gitlab-registry
          port: 5000
  tls:
    certResolver: letsencrypt
